Fix bug if you choose items too quick and make suggestions not overflow

--- a/react-website/src/index.css
+++ b/react-website/src/index.css
@@ -48,3 +48,8 @@ p {
     height: 120px;
   }
 }
+
+
+.suggestion-badge .euiBadge__text {
+  white-space: break-spaces !important;
+}
